--- a/src/App.css
+++ b/src/App.css
@@ -93,3 +93,15 @@
   background-color: black;
   border: none;
 }
+
+.speed{
+  outline: none;
+  margin: 10px;
+  width: 80px;
+  height: 20px;
+}
+
+.current{
+  background-color: green;
+
+}
