--- a/src/App.css
+++ b/src/App.css
@@ -46,20 +46,27 @@
   display: flex;
   justify-content: center;
   align-items:center;
+  background-color:gainsboro;
+  padding-bottom: 20%;
 }
 .buttons{
   display: flex;
   flex-direction:column;
   justify-content: center;
   align-items:center;
+  margin-right:25px;
+  padding:1%;
 }
 
 .button{
   margin: 5px;
   padding: 5px;
   border-radius:15px;
-  width: 100px;
+  width: 80px;
   outline: none;
+  border:4px solid ivory;
+  color: dimgrey;
+  font-weight:bold;
 }
 
 .header{
@@ -67,6 +74,14 @@
   flex-direction:column;
   justify-content: center;
   align-items:center;
+  color:slategrey;
+  font-weight: bold;
+  width: 65%;
+  border: 30px solid ivory;
+  background-color: lightgoldenrodyellow;
+  margin-top: 5%;
+  padding:2.5%;
+  border-radius:10px;
 }
 
 .colorbut{
@@ -80,6 +95,7 @@
 .colors{
   display: flex;
   flex-direction: column;
+  margin-left: 25px;
 }
 
 .red{
@@ -124,10 +140,17 @@
 .speed{
   outline: none;
   margin: 10px;
-  width: 60px;
-  height: 20px;
+  width: 70px;
+  height: 35px;
+  background: slategrey;
+  color: whitesmoke;
+  border:none;
+  font-weight:bold;
+  border-radius:15px;
+  border: 3px solid ivory;
 }
 
 .current{
-  background-color: green;
+  background-color: ivory;
+  color: slategrey;
 }
